--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logoateleiercolibri.ico.ico">
+    <link rel="icon" href="img/logofavicon.png">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
