--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
                         <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav redondo.png" alt="Icon"
-                            style="width: 60px; height: 60px;">
+                            style="width: 60pxf; height: 60px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
                 </a>
