--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logoateleiercolibri.ico.ico" rel="icon">
+    <link href="img/logofavicon.png" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
