--- a/cursos.html
+++ b/cursos.html
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logoateleiercolibri.ico.ico" rel="icon">
+    <link href="img/logofavicon.png" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logoateleiercolibri.ico.ico">
+    <link rel="icon" href="img/logofavicon.png">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
