--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Atelier Colibri</title>
+    <title>Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
