--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
@@ -107,6 +107,18 @@
             onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
+        <!-- About Start -->
+        <div class="container-fluid header bg-white p-0">
+            <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
+                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="">
+                            <img class="img-fluid w-100" src="img/msn2.jpg">
+                        </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
+
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-2">
@@ -119,8 +131,8 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="mailto:ateliercolibri@gmail.com"><i class="fa fa-envelope"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="mailto:ateliercolibri@gmail.com"><i
+                                    class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
