--- a/cursos.html
+++ b/cursos.html
@@ -93,7 +93,7 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
