--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
         <!-- Watshap End  -->
 
         <!-- About Start -->
-        <div class="container-fluid header bg-white p-0">
-            <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
+        <div class="container-fluid header">
+            <div class="align-center">
                     <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
                         <div class="">
                             <img class="img-fluid w-100" src="img/msn2.jpg">
