--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                         <div class="owl-carousel-item">
                             <img class="img-fluid" src="img/carousel_art_soul_colibri7.jpg" alt="">
                         </div>
+                        <div class="owl-carousel-item">
+                            <img class="img-fluid" src="img/carousel_art_soul_colibri8.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
