--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
             <div class="align-center">
                     <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
                         <div class="">
-                            <img class="img-fluid w-100" src="img/msn2.jpg">
+                            <img class="img-fluid w-100" src="img/about1.jpg">
                         </div>
                 </div>
             </div>
