--- a/about.html
+++ b/about.html
@@ -109,10 +109,37 @@
 
         <!-- About Start -->
         <div class="container-fluid header">
-            <div class="align-center">
+            <div class="">
                     <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
                         <div class="">
                             <img class="img-fluid w-100" src="img/about1.jpg">
+                        </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header">
+            <div class="align-center">
+                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="">
+                            <img class="img-fluid w-100" src="img/about2.jpg">
+                        </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header">
+            <div class="align-center">
+                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="">
+                            <img class="img-fluid w-100" src="img/about3.jpg">
+                        </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header">
+            <div class="align-center">
+                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                        <div class="">
+                            <img class="img-fluid w-100" src="img/about4.jpg">
                         </div>
                 </div>
             </div>
