--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Art Soul Colibri</title>
+    <title> Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logofavicon.png" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logofavicon.png">
+    <link rel="icon" href="img/favicon.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
