--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <!-- Meta Etiquetas SEO End -->
 
     <!-- Favicon Strat-->
-    <link href="img/logofavicon.png" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
     <!-- Favicon End-->
 
     <!-- Apple Touc Icon Strat -->
-    <link rel="icon" href="img/logofavicon.png">
+    <link rel="icon" href="img/favicon.ico">
     <!-- Apple Touc Icon End -->
 
     <!-- Canonical start -->
@@ -162,8 +162,8 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social"
-                                href="mailto:ateliercolibri@gmail.com"><i class="fa fa-envelope"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="mailto:ateliercolibri@gmail.com"><i
+                                    class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                            Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
+                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
                         </div>
                     </div>
                 </div>
