--- a/about.html
+++ b/about.html
@@ -110,37 +110,37 @@
         <!-- About Start -->
         <div class="container-fluid header">
             <div class="">
-                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
-                            <img class="img-fluid w-100" src="img/about1.jpg">
-                        </div>
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about1.jpg">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid header">
             <div class="align-center">
-                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
-                            <img class="img-fluid w-100" src="img/about2.jpg">
-                        </div>
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about2.jpg">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid header">
             <div class="align-center">
-                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
-                            <img class="img-fluid w-100" src="img/about3.jpg">
-                        </div>
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about3.jpg">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid header">
             <div class="align-center">
-                    <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="">
-                            <img class="img-fluid w-100" src="img/about4.jpg">
-                        </div>
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about4.jpg">
+                    </div>
                 </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a class="border-bottom" href="#">Art Soul Colibri</a>, All rights reserved.
-                            Designed by <a class="border-bottom" href="index.html">HBO Consulting</a>
+                            Designed by <a class="border-bottom" href="index.html">Plus Works Services</a>
                         </div>
                     </div>
                 </div>
