--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -113,82 +113,44 @@
             onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
         <!-- Watshap End  -->
 
-        <!-- Gallery Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Gallery</h1>
-                    <p>ART SOUL COLIBRI.</p>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="team-item rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
-                                <div
-                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
-                                            class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>€ 0.00</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="team-item rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
-                                <div
-                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
-                                            class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>€ 0.00</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="team-item rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
-                                <div
-                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
-                                            class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>€ 0.00</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                        <div class="team-item rounded overflow-hidden">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="img/galleryateliercolibr1.png" alt="">
-                                <div
-                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
-                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
-                                            class="fab fa-instagram"></i></a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Full Name</h5>
-                                <small>€ 0.00</small>
-                            </div>
-                        </div>
+        <!-- About Start -->
+        <div class="container-fluid header">
+            <div class="">
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about1.jpg">
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Gallery End -->
+        <div class="container-fluid header">
+            <div class="align-center">
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about2.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header">
+            <div class="align-center">
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about3.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid header">
+            <div class="align-center">
+                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="">
+                        <img class="img-fluid w-100" src="img/about4.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
