--- a/cursos.html
+++ b/cursos.html
@@ -83,7 +83,7 @@
                 <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div>
                         <img class="img-fluid" src="img/logoateleiercolibricirculo barr nav redondo.png" alt="Icon"
-                            style="width: 60px; height: 60px;">
+                            style="width: 60pxf; height: 60px;">
                     </div>
                     <h4 class="m-0 text-primary"> </h4> <!-- Aqui va Texto -->
                 </a>
@@ -93,7 +93,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <div class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
+                                <a href="" class="dropdown-item">Sobre Mi</a>
+                            </div>
+                        </div>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
@@ -153,7 +159,6 @@
         </div>
         <!-- Cursos End -->
 
-
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-2">
@@ -184,7 +189,6 @@
             </div>
         </div>
         <!-- Footer End -->
-
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
