--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <div class="nav-item dropdown">
+                            <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
+                                <a href="" class="dropdown-item">Sobre Mi</a>
+                            </div>
+                        </div>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
@@ -180,7 +186,6 @@
             </div>
         </div>
         <!-- Footer End -->
-
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
