--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -97,7 +97,7 @@
                             <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="" class="dropdown-item">Sobre Mi</a>
+                                <a href="" class="dropdown-item">Sobre Mim</a>
                             </div>
                         </div>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
