--- a/gallery.html
+++ b/gallery.html
@@ -97,10 +97,25 @@
                             <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
-                                <a href="" class="dropdown-item">Sobre Mi</a>
+                                <a href="" class="dropdown-item">Sobre Mim</a>
                             </div>
                         </div>
-                        <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                        <div class="nav-item dropdown">
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery Pintura Intuitiva</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="" class="dropdown-item">Acuarelas</a>
+                                <a href="" class="dropdown-item">Telas</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery Mandalas</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="" class="dropdown-item">Mandalas Geometricas</a>
+                                <a href="" class="dropdown-item">Mandalas Intuitivas</a>
+                                <a href="" class="dropdown-item">Mandalas Mat. Reciclado</a>
+                                <a href="" class="dropdown-item">Digitais</a>
+                            </div>
+                        </div>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
                 </div>
