--- a/cursos.html
+++ b/cursos.html
@@ -113,7 +113,7 @@
                                 <a href="" class="dropdown-item">Mandalas Geometricas</a>
                                 <a href="" class="dropdown-item">Mandalas Intuitivas</a>
                                 <a href="" class="dropdown-item">Mandalas Mat. Reciclado</a>
-                                <a href="" class="dropdown-item">Digitais</a>
+                                <a href="" class="dropdown-item">Mandalas Digitais</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
