--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery Pintura Intuitiva</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="" class="dropdown-item">Acuarelas</a>
+                                <a href="" class="dropdown-item">Aguarelas</a>
                                 <a href="" class="dropdown-item">Telas</a>
+                                <a href="" class="dropdown-item">Mandalas</a>
+                                <a href="" class="dropdown-item">E-books</a>
+                                <a href="" class="dropdown-item">Outros</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
