--- a/index.html
+++ b/index.html
@@ -110,12 +110,19 @@
                                 <a href="" class="dropdown-item">Outros</a>
                             </div>
                         </div>
+                        <div class="nav-item dropdown">
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Otros</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="" class="dropdown-item">E-books</a>
+                            </div>
+                        </div>
                         <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
                 </div>
             </nav>
         </div>
         <!-- Navbar End -->
+
 
         <!-- Carrousel Start -->
         <div class="container-fluid header bg-white p-0">
